front-back-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: front-back-app
spec: {}
status: {}
