frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: frontend
  namespace: front-back-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-back-app
      tier: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: front-back-app
        tier: front
    spec:
      containers:
      - image: my-registry.io/my-application/front:1.0
        name: front
        ports:
        - containerPort: 80
          name: frontend
        volumeMounts:
        - name: front-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: front-persistent-storage
        hostPath:
          path: /data/front
