front-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: front-service
  namespace: front-back-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: front-back-app
    tier: front
  type: NodePort
status:
  loadBalancer: {}
